completd homepage with whitespace fix

--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -30,6 +30,7 @@ $spacing-sm: 1rem;
 $spacing-md: 1.5rem;
 $spacing-lg: 2rem;
 $spacing-xl: 3rem;
+$spacing-white : 4rem;
 
 // Border Radius
 $border-radius: 5px;
